# lightpdf

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  SPEC.md  auto-rel.sh  build.ps1  build.sh  package.sh  rust-toolchain.toml  winres
.github/workflows/: ci.yml  release.yml
src/: i18n.rs  main.rs  theme.rs
src/app/: menu.rs  mod.rs  state.rs  tabs.rs
src/app/ui/: mod.rs  pdf_view.rs  sidebar.rs  status_bar.rs  toolbar.rs
src/pdf/: loader.rs  mod.rs  renderer.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/print/: mod.rs  platform.rs
src/print/platform/: linux.rs  macos.rs  stub.rs  windows.rs
src/utils/: file.rs  mod.rs  path.rs  shortcut.rs
wix/: LightPDF.wxs  lingpdf.wxs
